# learning-hda-reachability

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  environment.yml  gen_controllable_set.py  gen_feasibility.py  gen_icset.py  gen_reachset.py  gen_reachset_train.py  pyproject.toml
config/: __init__.py  ctrlset.yaml  landers.py  landers.yaml  softlanding_reachset.py
dev/: analyze_controllableset.ipynb  analyze_convexity.ipynb  analyze_reachset.ipynb  cvxnn_demo.ipynb  ipopt_pyomo.ipynb  minfuel_nlp.ipynb  minfuel_nlp.py  minfuel_nlp_ctrl_normalized.py  numba.ipynb  pygmo.ipynb  quantitative_analysis.ipynb  run_cp_deriv.py  sfmap_dynamics.ipynb  steer-reach-snopt.ipynb  steer-reach.ipynb  test_reachsteering.ipynb  train.ipynb  train_feas.ipynb  train_reach.ipynb
examples/: minfuel_nlp.py
sbatch/: gen_controllableset.sbatch  gen_icset.sbatch  gen_reachset.sbatch  gen_reachset_train.sbatch
script/: analyze_databounds.py  analyze_nn_reachset.py  analyze_reachset.py  demo_nn_reach_traj.py  gen_data_bounds.py  max_mean_guidance.py  qualitative_nn_analysis.py  quantitative_nn_analysis.py  read_reachsetdata.py  sample_reachset.py  train_reachset.py  visualize_reachset_data_distribution.py  visualize_training_progress.py
scripts/: analyze_ic_bounds.ipynb  compute_ic_bounds.py  compute_ic_bounds_new.py  gen_controllable_set.py
src/: __init__.py  dynamics.py  integrator.py  landers.py  safetymaps.py  visualization.py  zemzev.py
test/: parameterize_sys.py  run_basin.py  run_gd.py  run_mean_reachable_sfmap.py  run_rk4.py  (+3 more)
(+61 files in other folders)
