[tool.poetry]
name = "learn-reach"
version = "0.1.0"
description = ""
authors = ["Kento <ktomita3@gatech.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "learn_reach"}]

[tool.poetry.dependencies]
python = "3.9.18"
cvxpy = "^1.4.1"
torch = "^1.0.2"
numpy = "^1.26.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
pandas = "^2.1.2"
numba = "^0.58.1"
pytest = "^7.4.3"
diffcp = "^1.0.23"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
pyomo = "^6.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
mypy = "^1.6.1"
jupyterlab = "^4.0.7"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
